--- a/src/index.adoc
+++ b/src/index.adoc
@@ -71,7 +71,7 @@ Requirements:
 * Access to Snowflake account
 * Access to Git platform
 
-Restrictions:
+Limitations:
 
 * Integrated Planning features
 * Open Hub
